# tiralabra

./: .gitignore  README.md  pyproject.toml  tasks.py
Dokumentaatio/: maarittelydokumentti.md
dokumentaatio/: kaytto_ohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
src/: huffmanAlgo.py  huffman_algo.py  index.py  lz_seventyeight.py  node.py
src/tests/: huffman_algo_test.py  lz_seventyeight_test.py
testitiedostot/: demofile.txt
viikkoraportit/: Viikko1.md  Viikko2.md  Viikko3.md  Viikko4.md  Viikko5.md  Viikko6.md
