[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Eero Jantunen <jantunen.eero@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.3"
invoke = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4.2"
pylint = "2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
